# zdefuser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  jest.config.ts  package-lock.json  package.json  scratch  scratch.rs  test_rar_pwd.rs  test_rar_src.rs
.github/workflows/: release.yml
docs/: CNAME  index.html  robots.txt  script.js  sitemap.xml  styles.css
docs/assets/: THIRD-PARTY-NOTICES.txt
scripts/: build-release.sh  generate_licenses.py
src/: App.test.tsx  App.tsx  index.css  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu_test.rs  release.rs  sandbox.rs  security.rs  sevenz.rs  wasm.rs
src/__mocks__/: rawMock.ts
src/assets/: THIRD-PARTY-NOTICES.txt
src/components/: AboutModal.css  AboutModal.test.tsx  AboutModal.tsx  DropZone.css  DropZone.test.tsx  DropZone.tsx  ProgressPanel.css  ProgressPanel.test.tsx  ProgressPanel.tsx
tests/: generate_payloads.py  generate_rar_payload.py
tests/payloads/: 01_path_traversal.tar  03_symlink_attack.tar  04_executable_script.tar  07_malicious_traversal.rar
wasm-sandbox/: Cargo.toml
wasm-sandbox/src/: decompress.rs  main.rs  protocol.rs  security.rs  test_crc.rs  test_rar.rs  test_rar_crate.rs  test_rar_hash.rs  test_rar_pwd.rs  test_zip_api.rs  test_zip_error.rs
