[package]
name = "wasm-sandbox"
version = "1.1.0"
license = "AGPL-3.0-or-later"
description = "True Zero-Trust Sandboxed Archive Extraction"
authors = ["Cyber Sec Space"]
edition = "2024"

[dependencies]
zip = { version = "2.1", default-features = false, features = ["aes-crypto", "deflate", "time"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rar = { path = "../vendor/rar" }
crc32fast = "1.5.0"
sevenz-rust = "0.6.1"
crc = "3.4.0"
